--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>House Rent Services</title>
+    <title>T House</title>
     <!-- custom css link  -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./media.css">
